--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-            <h2>欢迎来到我的个人网站</h2>
-            <p>这里展示我的学历、工作经历和作品集。</p>
+            <h2>Welcome to My Personal Website</h2>
+            <p>In which shows my CV and Protfolio</p>
         </section>
 
         <!--==================== WORKS ====================-->
         <section class="work section" id="work">
-            <h2>作品集</h2>
+            <h2>Protfolio</h2>
             <div class="portfolio">
                 <div class="project">
-                    <h3>项目名称 1</h3>
+                    <h3>First Project 1</h3>
                     <p>项目描述...</p>
                 </div>
                 <div class="project">
-                    <h3>项目名称 2</h3>
+                    <h3>First Project 2</h3>
                     <p>项目描述...</p>
                 </div>
                 <!-- 可以继续添加更多项目 -->
