--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
         <!--==================== INFO ====================-->
         <section class="info section" id="info">
-            <h2>个人信息</h2>
-            <p><strong>学历：</strong>你的学历信息</p>
+            <h2>Personal Information</h2>
+            <p><strong>Tongji University：</strong>Bachelor of Engineering, Industrial Design（Media and Communication Design)（2021/2025）</p>
+            <p><strong>The Hong Kong Polytechnic University：</strong>Exchange Student, Interactive Media(2024Spring)</p>
             <p><strong>工作经历：</strong>你的工作经历信息</p>
         </section>
 
