--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
         <!--==================== INFO ====================-->
         <section class="info section" id="info">
-            <h2>Personal Information</h2>
+            <h2>Education</h2>
             <p><strong>Tongji University：</strong>Bachelor of Engineering, Industrial Design（Media and Communication Design)（2021/2025）</p>
             <p><strong>The Hong Kong Polytechnic University：</strong>Exchange Student, Interactive Media(2024Spring)</p>
-            <p><strong>工作经历：</strong>你的工作经历信息</p>
+            <h2>Working Experience</h2>
+            <p><strong>Metek Game：    Game Designer</strong>   Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.</p>
+            <p><strong>Tencent：       Battle Designer</strong>   Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade</p>
         </section>
         
  <!--==================== WORKS ====================-->
