--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <p><strong>Tongji University：</strong>Bachelor of Engineering, Industrial Design（Media and Communication Design)（2021/2025）</p>
             <p><strong>The Hong Kong Polytechnic University：</strong>Exchange Student, Interactive Media(2024 Spring)</p>
             <h2>Working Experience</h2>
-            <p><strong>Metek Game：/t    Game Designer</strong>  -Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.</p>
-            <p><strong>Tencent：/t    Battle Designer</strong>  -Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade</p>
+            <p><strong>Metek Game：&emsp;    Game Designer</strong>  -Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.</p>
+            <p><strong>Tencent：&emsp;    Battle Designer</strong>  -Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade</p>
         </section>
         
  <!--==================== WORKS ====================-->
