--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p><strong>The Hong Kong Polytechnic University：</strong>Exchange Student, Interactive Media(2024 Spring)</p>
             <h2>Working Experience</h2>
             <p><strong>Metek Game：&emsp;    Game Designer</strong>  -Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.</p>
-            <p><strong>Tencent：&emsp;    Battle Designer</strong>  -Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade</p>
+            <p><strong>Tencent：&emsp; &emsp;   Battle Designer</strong>  -Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.</p>
         </section>
         
  <!--==================== WORKS ====================-->
