--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </p>
     <p>
         <img src="assets/img/tencent-logo.png" alt="Tencent Logo" class="logo"> 
-        <strong>Tencent：&emsp;&emsp;Battle Designer</strong> - Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.
+        <strong>Tencent：&emsp;&emsp;&emsp;Battle Designer</strong> - Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.
     </p>
 </section>
 
