--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <h2>Working Experience</h2>
     <p>
         <img src="assets/img/metek-logo.png" alt="Metek Game Logo" class="logo"> 
-        <strong>Metek Game：&emsp;Game Designer</strong> - Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.
+        <strong>Metek Game：&emsp;Game Designer Intern</strong>（2024.4-2024.6） - Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.
     </p>
     <p>
         <img src="assets/img/tencent-logo.png" alt="Tencent Logo" class="logo"> 
-        <strong>Tencent：&emsp;&emsp;&emsp;Battle Designer</strong> - Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.
+        <strong>Tencent：&emsp;&emsp;&emsp;Battle Designer Intern</strong> -（2024.7 until now） Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.
     </p>
 </section>
 
