--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h2>Working Experience</h2>
     <p>
         <img src="assets/img/metek-logo.png" alt="Metek Game Logo" class="logo"> 
-        <strong>Metek Game：&emsp;Game Designer Intern</strong>（2024.4-2024.6） - Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.
+        <strong>Metek Game：&emsp;Game Designer Intern</strong> -（2024.4-2024.6） Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.
     </p>
     <p>
         <img src="assets/img/tencent-logo.png" alt="Tencent Logo" class="logo"> 
