--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#work">Portfolio</a></li>
-                <li><a href="#info">CV</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#other skills">Other Skills</a></li>
+                <li><a href="#past">Past</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -50,7 +51,7 @@
             </li>
             
             <li>
-                <a href="#past" title="Pastt" class="nav__lick">
+                <a href="#past" title="Past" class="nav__lick">
                     <i class="ri-award-line"></i>
                 </a>
             </li>
