--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
             
             <li>
-                <a href="#contract" title="Contract" class="nav__lick">
+                <a href="#contact" title="Contact" class="nav__lick">
                     <i class="ri-mail-send-line"></i>
                 </a>
             </li>
