--- a/index.html
+++ b/index.html
@@ -70,20 +70,21 @@
     </main>
     <!--==================== HOME ====================-->
         <section class="home section" id="home">
-            <h2>Welcome to My Personal Website</h2>
+            <h2>Welcome to My Personal Website </h2>
             <p>In which shows my CV and Portfolio</p>
             <div class="home__container container grid">
                 <!--======== PERFIL =======-->
                 <div class="perfil">
-                    <img src="assets/img/home-perfil.png" alt="image" class="perfil__img">
-
-                    <div class="perfil__data">
+                     <img src="assets/img/home-perfil.png" alt="image" class="perfil__img">
+                     <div class="perfil__data">
                         <h1 class="perfil__name" style="font-size: 4rem;"> Daniel<br> Yujian <br> Li</h1>
-                    </div>
-                    <div class="perfil__buttons">
+                          <div class="perfil__buttons">
                         <a href="#projects" class="button">Projects</a>
                         <a href="#info" class="button button__black">Information</a>
+                          </div>
                     </div>
+
+
                 </div>
             </div>
         </section>
@@ -121,25 +122,49 @@
 
        <!--==================== INFO ====================-->
 <section class="info section" id="info">
-    <h2>Education</h2>
-    <p>
-        <img src="assets/img/tongji-university-logo.png" alt="Tongji University Logo" class="logo"> 
+    <div class="info">
+        <h1 class="info__name">Information</h1>
+        <a href="assets/pdf/Xian-Cv.pdf" class="button button__black">Download CV</a>
+        <div class="info__data">
+            <div class="info__circle"></div>
+             <h2 class="info__name">Education</h2>
+        </div>
+
+    <div class="info__image">
+          <img src="assets/img/tongji-university-logo.png" alt="Tongji University Logo" class="logo">
+    </div>
+    <p class="info__description">
         <strong>Tongji University：</strong>Bachelor of Engineering, Industrial Design（Media and Communication Design)（2021/2025）
     </p>
-    <p>
-        <img src="assets/img/hk-polytechnic-logo.png" alt="The Hong Kong Polytechnic University Logo" class="logo"> 
+
+    <div class="info__image">
+          <img src="assets/img/hk-polytechnic-logo.png" alt="Tongji University Logo" class="logo">
+    </div>
+    <p class="info__description">
         <strong>The Hong Kong Polytechnic University：</strong>Exchange Student, Interactive Media(2024 Spring)
     </p>
-    
-    <h2>Working Experience</h2>
-    <p>
-        <img src="assets/img/metek-logo.png" alt="Metek Game Logo" class="logo"> 
+
+    <div class="info__data">
+            <div class="info__circle"></div>
+             <h2 class="info__name">Working Experience</h2>
+    </div>
+    <div class="info__image">
+        <img src="assets/img/metek-logo.png" alt="Metek Game Logo" class="logo">
+    </div>
+    <p class="info__description">
         <strong>Metek Game：&emsp;Game Designer Intern</strong> -（2024.4-2024.6） Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.
     </p>
-    <p>
-        <img src="assets/img/tencent-logo.png" alt="Tencent Logo" class="logo"> 
+
+    <div class="info__image">
+        <img src="assets/img/tencent-logo.png" alt="Tencent Logo" class="logo">
+    </div>
+    <p class="info__description">
         <strong>Tencent：&emsp;&emsp;&emsp;Battle Designer Intern</strong> -（2024.7 until now） Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.
     </p>
+
+    </div>
+
+
 </section>
 
         
