--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <nav>
         <ul class="nav__list">
             <li>
-                <a href="#home" title="Home" class="nav__lick">
+                <a href="#home" title="Home" class="nav__lick active-link">
                     <i class="ri-home-6-line"></i>
                 </a>
             </li>
 
             <li>
-                <a href="#projects" title="Projects" class="nav__lick">
+                <a href="#projects" title="Projects" class="nav__link active-link ">
                     <i class="ri-folder-2-line"></i>
                 </a>
             </li>
