--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul >
                 <li><a href="#home">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#other skills">Other Skills</a></li>
+                <li><a href="#other-skills">Other Skills</a></li>
                 <li><a href="#info">Information</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -34,19 +34,19 @@
     <nav>
         <ul class="nav__list">
             <li>
-                <a href="#home" title="Home" class="nav__lick active-link">
+                <a href="#home" title="Home" class="nav__lick active-link ">
                     <i class="ri-home-6-line"></i>
                 </a>
             </li>
 
             <li>
-                <a href="#projects" title="Projects" class="nav__link active-link ">
+                <a href="#projects" title="Projects" class="nav__lick ">
                     <i class="ri-folder-2-line"></i>
                 </a>
             </li>
 
             <li>
-                <a href="#other skills" title="Other Skills" class="nav__lick">
+                <a href="#other-skills" title="Other Skills" class="nav__lick">
                     <i class="ri-file-line"></i>
                 </a>
             </li>
@@ -91,7 +91,7 @@
 
 
             </div>
-        </section>
+
   <!--==================== About ====================-->
                  <div class="about">
                       <div class="about__image">
@@ -119,7 +119,7 @@
                      </div>
 
                  </div>
-
+      </section>
         <!--==================== projects ====================-->
         <section class="projects section" id="projects">
             <h1> Main Projects</h1>
@@ -241,7 +241,7 @@
              <!-- 可以继续添加更多项目 -->
         </section>
          <!--==================== Other Skills ====================-->
-        <section class="other skills section" id="other skills">
+        <section class="other skills section" id="other-skills">
             <h1>Other Skills</h1>
            <div class="works__container container grid">
                 <article class="works__card">
