--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav>
         <ul class="nav__list">
             <li>
-                <a href="#home" title="Home" class="nav__lick active-link ">
+                <a href="#home" title="Home" class="nav__lick  ">
                     <i class="ri-home-6-line"></i>
                 </a>
             </li>
