--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
     <title>Daniel Yujian Li's Portfolio</title>
 </head>
 <body>
-    <!--==================== HEADER ====================-->
-    <header class="header" id="header" >
-        <h1></h1>
-        <nav>
-            <ul >
-                <li><a href="#home">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#other-skills">Other Skills</a></li>
-                <li><a href="#info">Information</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+   <!--==================== HEADER ====================-->
+<header class="header" id="header">
+    <nav>
+        <div class="nav-toggle" id="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul class="nav-list">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#other-skills">Other Skills</a></li>
+            <li><a href="#info">Information</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
      <!--==================== NAV_ICON ====================-->
 <main class="nav_icon">
     <nav>
@@ -502,7 +506,7 @@
     <div class="info__image">
           <img src="assets/img/tongji-university-logo.png" alt="Tongji University Logo" class="logo">
         <h3 class="info__description">
-        <strong class="info__title">Tongji University：</strong>（2021/2025）
+        <strong class="info__title">Tongji University:（2021/2025）</strong>
 
             <p class="info__title">
             Bachelor of Engineering, Industrial Design（Media and Communication Design)
@@ -513,7 +517,7 @@
 
 
     <div class="info__image">
-          <img src="assets/img/hk-polytechnic-logo.png" alt="Tongji University Logo" class="logo">
+          <img src="assets/img/hk-polytechnic-logo.png" alt="HK PolyU Logo" class="logo">
          <h3 class="info__description">
         <strong class="info__title">The Hong Kong Polytechnic University：(2024 Spring)</strong>
 
