--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Daniel Yujian Li's Portfolio</title>
+    <title>Daniel Yujian Li's Website</title>
 </head>
 <body>
    <!--==================== HEADER ====================-->
