--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!--==================== projects ====================-->
         <section class="projects section" id="projects">
             <h1> Main Projects</h1>
-             <a href="https://ladykiller711.itch.io/portfolio2024" download target="_black"  class="button button__black">Download Portfolio</a>
+             <a href="assets/pdf/liyujian_20mb.pdf" download target="_black"  class="button button__black">Download Portfolio</a>
             <div class="projects__container container grid">
                 <article class="projects__card">
                     <a href="#" target="_blank" class="projects__image">
@@ -143,7 +143,7 @@
                     </div>
                 </article>
                 <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
+                    <a href="https://ladykiller711.itch.io/under-control" target="_blank" class="projects__image">
                         <img src="assets/img/project-depression.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -161,7 +161,7 @@
                     </a>
                 </article>
                  <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
+                    <a href="https://ladykiller711.itch.io/prosody" target="_blank" class="projects__image">
                         <img src="assets/img/project-rhythm.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -178,7 +178,7 @@
                     </a>
                 </article>
                   <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
+                    <a href="https://ladykiller711.itch.io/spark-spectrum" target="_blank" class="projects__image">
                         <img src="assets/img/project-hue.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -222,7 +222,7 @@
                     </div>
                 </article>
                 <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
+                    <a href="https://zeenaz.itch.io/fish-dang-rolling-laud" target="_blank" class="projects__image">
                         <img src="assets/img/project-dang.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -292,7 +292,7 @@
 
                 </article>
                <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://youtu.be/BLfqv3Dgdq8" target="_blank" class="works__image">
                         <img src="assets/img/work-fire.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -309,7 +309,7 @@
                     </a>
                 </article>
                 <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://youtu.be/fwyou4lK2a4 target="_blank" class="works__image">
                         <img src="assets/img/work-moire.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -326,7 +326,7 @@
                     </a>
                 </article>
                <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://youtu.be/XiW4ckzKzzc" target="_blank" class="works__image">
                         <img src="assets/img/work-emperor.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -343,7 +343,7 @@
                     </a>
                 </article>
                <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://youtu.be/vuRPBbtw0c4" target="_blank" class="works__image">
                         <img src="assets/img/work-spider.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -361,7 +361,7 @@
                     </a>
                 </article>
                <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://youtu.be/mI2PxLXepZQ" target="_blank" class="works__image">
                         <img src="assets/img/work-memory.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -378,7 +378,7 @@
                     </a>
                 </article>
                 <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://ladykiller711.itch.io/escape-the-mirror" target="_blank" class="works__image">
                         <img src="assets/img/work-brick.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -396,7 +396,7 @@
                     </a>
                 </article>
                 <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://ladykiller711.itch.io/across" target="_blank" class="works__image">
                         <img src="assets/img/work-plane.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -413,7 +413,7 @@
                     </a>
                 </article>
                 <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://ladykiller711.itch.io/beefender" target="_blank" class="works__image">
                         <img src="assets/img/work-bee.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -431,7 +431,7 @@
                     </a>
                 </article>
                  <article class="works__card">
-                    <a href="#" target="_blank" class="works__image">
+                    <a href="https://ladykiller711.itch.io/godeep" target="_blank" class="works__image">
                         <img src="assets/img/work-deep.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
@@ -497,7 +497,7 @@
     <div class="info">
         <h1 class="info__name">Information</h1>
 
-        <a href="assets/pdf/CV Yujian Li.docx" download target="_black"  class="button button__black">Download CV</a>
+        <a href="assets/pdf/CV Yujian Li.pdf" download target="_black"  class="button button__black">Download CV</a>
         <div class="info__data">
             <div class="info__circle"></div>
              <h2 class="info__name">Education</h2>
