--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <div class="projects__container container grid">
                 <article class="projects__card">
                     <a href="#" target="_blank" class="projects__image">
+                    <a href="https://ladykiller711.itch.io/nutrivision" target="_blank" class="projects__image">
                         <img src="assets/img/project-XR.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -141,6 +142,10 @@
                             An innovative AR tool that helps you track your daily meals by recognizing food items in real time, instantly displaying their nutritional information, such as calories, macronutrients, and portion sizes. This tool not only simplifies meal logging but also empowers users to make healthier choices by providing actionable insights directly through their camera, making nutrition tracking seamless and engaging.
                         </p>
                     </div>
+                    <a href="https://ladykiller711.itch.io/nutrivision" target="_blank" class="projects__button">
+                        <i class="ri-link"></i>
+                        <span>Visit Project</span>
+                    </a>
                 </article>
                 <article class="projects__card">
                     <a href="https://ladykiller711.itch.io/under-control" target="_blank" class="projects__image">
@@ -195,7 +200,6 @@
                     </a>
                 </article>
                  <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
                         <img src="assets/img/project-mind.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -206,9 +210,13 @@
                             	This VR video is designed to help people alleviate anxiety through mindfulness methods. We create complete video content by editing maps in UE, exporting panoramic images, synthesizing videos, and processing speech and sound.
                         </p>
                     </div>
+                      <a href="https://www.720yun.com/vr/0bcjkd4kuy3" target="_blank" class="projects__button">
+                        <i class="ri-link"></i>
+                        <span>Visit Project</span>
+                    </a>
                 </article>
                 <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
+                    <a href="https://youtu.be/0lQO6b0PT4k" target="_blank" class="projects__image">
                         <img src="assets/img/project-archi.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -220,6 +228,10 @@
 				             <br>During this period, you will experience the complete construction process of ancient Chinese official architecture, and compete with your opponents about the construction speed, and determine the final winner!
                         </p>
                     </div>
+                     <a href="https://youtu.be/0lQO6b0PT4k" target="_blank" class="projects__button">
+                        <i class="ri-link"></i>
+                        <span>Visit Project</span>
+                    </a>
                 </article>
                 <article class="projects__card">
                     <a href="https://zeenaz.itch.io/fish-dang-rolling-laud" target="_blank" class="projects__image">
