--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
              <a href="assets/pdf/liyujian_20mb.pdf" download target="_black"  class="button button__black">Download Portfolio</a>
             <div class="projects__container container grid">
                 <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
                     <a href="https://ladykiller711.itch.io/nutrivision" target="_blank" class="projects__image">
                         <img src="assets/img/project-XR.png" alt="image" class="projects__img">
                     </a>
@@ -200,6 +199,7 @@
                     </a>
                 </article>
                  <article class="projects__card">
+                    <a href="https://www.720yun.com/vr/0bcjkd4kuy3" target="_blank" class="projects__image">
                         <img src="assets/img/project-mind.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
