--- a/index.html
+++ b/index.html
@@ -147,6 +147,23 @@
                     </a>
                 </article>
                 <article class="projects__card">
+                    <a href="#" target="_blank" class="projects__image">
+                        <img src="assets/img/project-saga.png" alt="image" class="projects__img">
+                    </a>
+                    <div class="projects__data">
+                        <h3 class="projects__name">
+                            Saga
+                        </h3>
+                        <p class="projects__description">
+                            	This is a preliminary display of a 3D action game, which includes narrative and level design. In the game, I created a combo system for characters, AI logic for monsters, and inheritance relationships. In terms of art, I created the Outline Cartoon shader to determine the art style of the game. In addition, I also created related VFX for scene display.
+                        </p>
+                    </div>
+                    <a href="https://ladykiller711.itch.io/under-control" target="_blank" class="projects__button">
+                        <i class="ri-link"></i>
+                        <span>Visit Project</span>
+                    </a>
+                </article>
+                <article class="projects__card">
                     <a href="https://ladykiller711.itch.io/under-control" target="_blank" class="projects__image">
                         <img src="assets/img/project-depression.png" alt="image" class="projects__img">
                     </a>
