--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </a>
                 </article>
                 <article class="projects__card">
-                    <a href="#" target="_blank" class="projects__image">
+                    <a href="https://youtu.be/pI3ceavM3cY" target="_blank" class="projects__image">
                         <img src="assets/img/project-saga.png" alt="image" class="projects__img">
                     </a>
                     <div class="projects__data">
@@ -158,7 +158,7 @@
                             	This is a preliminary display of a 3D action game, which includes narrative and level design. In the game, I created a combo system for characters, AI logic for monsters, and inheritance relationships. In terms of art, I created the Outline Cartoon shader to determine the art style of the game. In addition, I also created related VFX for scene display.
                         </p>
                     </div>
-                    <a href="https://ladykiller711.itch.io/under-control" target="_blank" class="projects__button">
+                    <a href="https://youtu.be/pI3ceavM3cY" target="_blank" class="projects__button">
                         <i class="ri-link"></i>
                         <span>Visit Project</span>
                     </a>
@@ -338,7 +338,7 @@
                     </a>
                 </article>
                 <article class="works__card">
-                    <a href="https://youtu.be/fwyou4lK2a4 target="_blank" class="works__image">
+                    <a href="https://youtu.be/fwyou4lK2a4" target="_blank" class="works__image">
                         <img src="assets/img/work-moire.png" alt="image" class="works__img">
                     </a>
                     <div class="works__data">
