--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       </div>
                      <div class="about__info">
                          <h3 class="about__name">Daniel Yujian Li-<b>Game/Media/Interaction Designer & Developer</b></h3>
-                    <p class="about__description" >Located in Shanghai, I am a design student with a wealth of experience in game design and production.My academic background in digital media, combined with practical work experience in game companies, has given me a deep understanding of the creative and technical aspects of game development. I have also participated in Game Jam multiple times and have certain skills in design, art, programming, project management, and other aspects. I am passionate about creating innovative interactive experiences that not only attract players, but also break through the boundaries of digital storytelling and gameplay mechanics. I am dedicated to innovation and committed to continuously improving my skills. I aspire to create impactful projects in the future and make breakthroughs in interactive technology. </p>
+                    <p class="about__description" >Located in Singapore, I am a design student with a wealth of experience in game design and production.My academic background in digital media, combined with practical work experience in game companies, has given me a deep understanding of the creative and technical aspects of game development. I have also participated in Game Jam multiple times and have certain skills in design, art, programming, project management, and other aspects. I am passionate about creating innovative interactive experiences that not only attract players, but also break through the boundaries of digital storytelling and gameplay mechanics. I am dedicated to innovation and committed to continuously improving my skills. I aspire to create impactful projects in the future and make breakthroughs in interactive technology. </p>
                     <div class="about__social">
                         <a href="https://github.com/danielyjli" target="_blank" class="about__link">
                             <i class="ri-github-line"></i>
@@ -129,6 +129,23 @@
             <h1> Main Projects</h1>
              <a href="assets/pdf/liyujian_20mb.pdf" download target="_black"  class="button button__black">Download Portfolio</a>
             <div class="projects__container container grid">
+                 <article class="projects__card">
+                    <a href="https://ladykiller711.itch.io/two-face" target="_blank" class="projects__image">
+                        <img src="assets/img/project-twoface.png" alt="image" class="projects__img">
+                    </a>
+                    <div class="projects__data">
+                        <h3 class="projects__name">
+                            Two-Face
+                        </h3>
+                        <p class="projects__description">
+                           Two-Face is an adventure game that combines local two player control and interactive narrative. Players take on the roles of two presidential candidates who fall into a different world, controlling the protagonist Aka through a combination of cooperation and competition, embarking on a journey to collect medals and save the world.
+                        </p>
+                    </div>
+                    <a href="https://ladykiller711.itch.io/two-face" target="_blank" class="projects__button">
+                        <i class="ri-link"></i>
+                        <span>Visit Project</span>
+                    </a>
+                </article>
                 <article class="projects__card">
                     <a href="https://ladykiller711.itch.io/nutrivision" target="_blank" class="projects__image">
                         <img src="assets/img/project-XR.png" alt="image" class="projects__img">
@@ -207,7 +224,7 @@
                             Spark Spectrum
                         </h3>
                         <p class="projects__description">
-                            	This is a game jam project, and as the person in charge of the entire project, I have completed the preliminary planning work and almost all the program code implementation. My teammates have almost no experience in game development, so I still need to spend time guiding them. This platform jumping game inspired by the game Hue was successfully completed and built within 48 hours.
+                            	This is a game jam project, and as the person in charge of the entire project, I have completed the preliminary planning work and almost all the program code implementation. My teammates had almost no experience in game development, so I still had to spend time guiding them. This platform jumping game inspired by the game Hue was successfully completed and built within 48 hours.
                         </p>
                     </div>
                     <a href="https://ladykiller711.itch.io/spark-spectrum" target="_blank" class="projects__button">
@@ -241,7 +258,7 @@
                             Archi Masters
                         </h3>
                         <p class="projects__description">
-                            "Archi Masters" is a very interesting simulation game where You will play the role of an ancient Chinese architect, completing corresponding tests to determine who is the best architect.
+                            "Archi Masters" is a very interesting simulation game where you will play the role of an ancient Chinese architect, completing corresponding tests to determine who is the best architect.
 				             <br>During this period, you will experience the complete construction process of ancient Chinese official architecture, and compete with your opponents about the construction speed, and determine the final winner!
                         </p>
                     </div>
@@ -516,7 +533,7 @@
                            Oneiric Odyssey
                         </h3>
                         <p class="works__description">
-                       In this VR game,layer needs to swing their arm to jump, and use the handles to move around the scene, rotate the perspective, and flash forward. In each level, players need to use these abilities to obtain props and reach the key items. Although I have completed the code and map design for the basic movements of the characters, the project was terminated due to time constraints.
+                       In this VR game, player needs to swing their arm to jump, and use the handles to move around the scene, rotate the perspective, and flash forward. In each level, players need to use these abilities to obtain props and reach the key items. Although I have completed the code and map design for the basic movements of the characters, the project was terminated due to time constraints.
 
                         </p>
                     </div>
@@ -540,10 +557,10 @@
     <div class="info__image">
           <img src="assets/img/tongji-university-logo.png" alt="Tongji University Logo" class="logo">
         <h3 class="info__description">
-        <strong class="info__title">Tongji University:（2021/2025）</strong>
+        <strong class="info__title">Tongji University</strong> -（2021.9-2025.7）
 
             <p class="info__title">
-            Bachelor of Engineering, Industrial Design（Media and Communication Design)
+            Bachelor of Engineering, Industrial Design (Media and Communication Design Track)
         </p>
     </h3>
 
@@ -553,7 +570,7 @@
     <div class="info__image">
           <img src="assets/img/hk-polytechnic-logo.png" alt="HK PolyU Logo" class="logo">
          <h3 class="info__description">
-        <strong class="info__title">The Hong Kong Polytechnic University：(2024 Spring)</strong>
+        <strong class="info__title">The Hong Kong Polytechnic University</strong> - (2024 Spring)
 
              <p class="info__title">
                  Exchange Student, Interactive Media
@@ -561,6 +578,16 @@
     </h3>
     </div>
 
+    <div class="info__image">
+          <img src="assets/img/nus-logo.png" alt="HK PolyU Logo" class="logo">
+         <h3 class="info__description">
+        <strong class="info__title">National University of Singapore</strong> - (2025.8 until now)
+
+             <p class="info__title">
+                 Master of Art, Industrial Design (Research)
+             </p>
+    </h3>
+    </div>
 
     <div class="info__data">
             <div class="info__circle"></div>
@@ -579,7 +606,7 @@
     <div class="info__image">
         <img src="assets/img/tencent-logo.png" alt="Tencent Logo" class="logo">
         <h3 class="info__description">
-        <strong class="info__title">Tencent：&emsp;&emsp;&emsp;&emsp;Battle Designer Intern</strong> -（2024.7 until now）
+        <strong class="info__title">Tencent：&emsp;&emsp;&emsp;&emsp;Battle Designer Intern</strong> -（2024.7-2025.1）
 
             <p class="info__title">Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.</p>
     </h3>
