--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       </div>
                      <div class="about__info">
                          <h3 class="about__name">Daniel Yujian Li-<b>Game/Media/Interaction Designer & Developer</b></h3>
-                    <p class="about__description" >Located in Singapore, I am a design student with a wealth of experience in game design and production.My academic background in digital media, combined with practical work experience in game companies, has given me a deep understanding of the creative and technical aspects of game development. I have also participated in Game Jam multiple times and have certain skills in design, art, programming, project management, and other aspects. I am passionate about creating innovative interactive experiences that not only attract players, but also break through the boundaries of digital storytelling and gameplay mechanics. I am dedicated to innovation and committed to continuously improving my skills. I aspire to create impactful projects in the future and make breakthroughs in interactive technology. </p>
+                    <p class="about__description" >Located in Singapore, I am a design student with a wealth of experience in game design and production. My academic background in digital media, combined with practical work experience in game companies, has given me a deep understanding of the creative and technical aspects of game development. I have also participated in Game Jam multiple times and have certain skills in design, art, programming, project management, and other aspects. I am passionate about creating innovative interactive experiences that not only attract players, but also break through the boundaries of digital storytelling and gameplay mechanics. I am dedicated to innovation and committed to continuously improving my skills. I aspire to create impactful projects in the future and make breakthroughs in interactive technology. </p>
                     <div class="about__social">
                         <a href="https://github.com/danielyjli" target="_blank" class="about__link">
                             <i class="ri-github-line"></i>
@@ -557,7 +557,7 @@
     <div class="info__image">
           <img src="assets/img/tongji-university-logo.png" alt="Tongji University Logo" class="logo">
         <h3 class="info__description">
-        <strong class="info__title">Tongji University</strong> -（2021.9-2025.7）
+        <strong class="info__title">Tongji University</strong> -（2021.9 - 2025.7）
 
             <p class="info__title">
             Bachelor of Engineering, Industrial Design (Media and Communication Design Track)
@@ -570,21 +570,21 @@
     <div class="info__image">
           <img src="assets/img/hk-polytechnic-logo.png" alt="HK PolyU Logo" class="logo">
          <h3 class="info__description">
-        <strong class="info__title">The Hong Kong Polytechnic University</strong> - (2024 Spring)
+        <strong class="info__title">The Hong Kong Polytechnic University</strong> - (2024.1 - 2024.5)
 
              <p class="info__title">
-                 Exchange Student, Interactive Media
+                 Exchange Term, Interactive Media
              </p>
     </h3>
     </div>
 
     <div class="info__image">
-          <img src="assets/img/nus-logo.png" alt="HK PolyU Logo" class="logo">
+          <img src="assets/img/nus-logo.png" alt="NUS Logo" class="logo">
          <h3 class="info__description">
         <strong class="info__title">National University of Singapore</strong> - (2025.8 until now)
 
              <p class="info__title">
-                 Master of Art, Industrial Design (Research)
+                 Master of Art, Industrial Design (by Research)
              </p>
     </h3>
     </div>
@@ -596,19 +596,18 @@
     <div class="info__image">
         <img src="assets/img/metek-logo.png" alt="Metek Game Logo" class="logo">
         <h3 class="info__description">
-        <strong class="info__title">Metek Game：&emsp;Game Designer Intern</strong> -（2024.4-2024.6）
+        <strong class="info__title">Metek Game：&emsp;Game Designer Intern</strong> -（2024.4 - 2024.6）
 
             <p class="info__title">Responsible for the writing of the new system plan of the game under development, and the interactive update of the online system.</p>
     </h3>
     </div>
 
-
     <div class="info__image">
         <img src="assets/img/tencent-logo.png" alt="Tencent Logo" class="logo">
         <h3 class="info__description">
-        <strong class="info__title">Tencent：&emsp;&emsp;&emsp;&emsp;Battle Designer Intern</strong> -（2024.7-2025.1）
+        <strong class="info__title">Tencent：&emsp;&emsp;&emsp;&emsp;Combat Designer Intern</strong> -（2024.7 - 2025.1）
 
-            <p class="info__title">Responsible for the design and production of dungeon mechanics (MonsterAI, Skill, Level) for content updates in the game Moonlight Blade.</p>
+            <p class="info__title">Responsible for the design and production of dungeon mechanics (Monster AI, Skill, Level) for content updates in the MMO game Moonlight Blade.</p>
     </h3>
     </div>
 
